# py-example

./: .gitignore  Dockerfile  Dockerfile.test  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  test_main.py
